--- a/app/views/games/games.html.erb
+++ b/app/views/games/games.html.erb
@@ -15,6 +15,9 @@
 
 </div>
 
+<% unless @in_progress_games.any? && @finished_games.any? %>
+  <%= link_to "Start Playing Games", new_ttt_game_path, class: 'btn btn-get-started' %>
+<% end %>
 
 
 <% if @in_progress_games.any? %>
