--- a/app/views/mttt_games/new.html.erb
+++ b/app/views/mttt_games/new.html.erb
@@ -1,3 +1,6 @@
+<div class="new-game">
+<h1 class="section-heading">Movable Tic-Tac-Toe</h1>
+</div>
 <%= form_for @mttt_game do |f| %>
   <h2 class="form-header">Play Another User</h2>
   <div class="form-group">
