--- a/app/views/ttt_games/new.html.erb
+++ b/app/views/ttt_games/new.html.erb
@@ -1,3 +1,7 @@
+<div class="new-game">
+<h1 class="section-heading">Tic-Tac-Toe</h1>
+</div>
+
 <%= form_for @ttt_game do |f| %>
   <h2 class="form-header">Play Another User</h2>
   <div class="form-group">
